syntax="proto3";

package proto;

enum NetworkType {
    HTTP = 0;
    TCP  = 1; // default tunnel
    // NotTunnelTCP = 2;
}

enum MsgType {
    None  = 0;
    Error = 1;
}

message Options {
}

message Msg {
    string  network = 1;
    int64   msg_id  = 2;
    MsgType type    = 3;
    bytes   body    = 4;
}

message Addr {
    string  ip = 1;
    int32 port = 2;
}

message Header {
    string          key   = 1;
    repeated string value = 2;
}

message HTTPBody {
    int64           msg_id = 1;
    Addr            Laddr  = 2;
    string          url    = 3;
    string          method = 4;
    bytes           body   = 5;
    repeated Header header = 6;
}

message TCPBody {
    int64 msg_id = 1;
    Addr  Laddr  = 2;
    Addr  Raddr  = 3;
    bytes body   = 4;
    // 0:走bind方式；1:走代理方式
    int32 type   = 5;
}

// 绑定请求
message Bind {
    int64 msg_id = 1;
}

// 连接错误请求 
message ErrorBody {
    int64  p_msg_id = 1;
    int64  msg_id   = 2;
    string err      = 3;
}